## Process this file with automake to create makefile.in.

SUBDIRS = lib bin config
EXTRA_DIST = interop_ph2/config.txt \
	interop_ph2/config.sample.txt \
	interop_ph2/make_scenario.pl \
	interop_ph2/command.FreeBSD.txt \
	interop_ph2/command.KAME.txt \
	interop_ph2/command.Linux.txt \
	interop_ph2/command.NetBSD.txt \
	interop_ph2/command.OpenBSD.txt \
	interop_ph2/command.USAGI.txt \
	interop_ph2/host.host.1_1_A.sc interop_ph2/host.host.1_1_B.sc \
	interop_ph2/host.host.1_1_C.sc interop_ph2/host.host.1_2_A.sc \
	interop_ph2/host.host.1_2_B.sc interop_ph2/host.host.1_6_C.sc \
	interop_ph2/host.host.cleanup.sc \
	interop_ph2/host.router.1_1_D.sc interop_ph2/host.router.1_1_E.sc \
	interop_ph2/host.router.1_1_F.sc interop_ph2/host.router.1_2_C.sc \
	interop_ph2/host.router.1_2_D.sc interop_ph2/host.router.1_3_A.sc \
	interop_ph2/host.router.1_3_B.sc interop_ph2/host.router.1_3_C.sc \
	interop_ph2/host.router.1_4_A.sc interop_ph2/host.router.1_4_B.sc \
	interop_ph2/host.router.1_5.sc \
	interop_ph2/host.router.1_6_A.sc interop_ph2/host.router.1_6_D.sc \
	interop_ph2/host.router.cleanup.sc \
	interop_ph2/router.host.1_1_D.sc interop_ph2/router.host.1_1_E.sc \
	interop_ph2/router.host.1_1_F.sc interop_ph2/router.host.1_2_C.sc \
	interop_ph2/router.host.1_2_D.sc interop_ph2/router.host.1_3_A.sc \
	interop_ph2/router.host.1_3_B.sc interop_ph2/router.host.1_3_C.sc \
	interop_ph2/router.host.1_4_A.sc interop_ph2/router.host.1_4_B.sc \
	interop_ph2/router.host.1_5.sc \
	interop_ph2/router.host.1_6_A.sc interop_ph2/router.host.1_6_D.sc \
	interop_ph2/router.host.cleanup.sc \
	interop_ph2/router.router.1_1_G.sc interop_ph2/router.router.1_1_H.sc \
	interop_ph2/router.router.1_1_I.sc interop_ph2/router.router.1_2_E.sc \
	interop_ph2/router.router.1_2_F.sc interop_ph2/router.router.1_6_B.sc \
	interop_ph2/router.router.1_6_E.sc \
	interop_ph2/router.router.cleanup.sc \
	doc/MANUAL.vel

data_DATA = README doc/MANUAL.vel 
sharedstate_DATA = interop_ph2/config.txt \
	interop_ph2/config.sample.txt \
	interop_ph2/make_scenario.pl \
	interop_ph2/command.FreeBSD.txt \
	interop_ph2/command.KAME.txt \
	interop_ph2/command.Linux.txt \
	interop_ph2/command.NetBSD.txt \
	interop_ph2/command.OpenBSD.txt \
	interop_ph2/command.USAGI.txt \
	interop_ph2/host.host.1_1_A.sc interop_ph2/host.host.1_1_B.sc \
	interop_ph2/host.host.1_1_C.sc interop_ph2/host.host.1_2_A.sc \
	interop_ph2/host.host.1_2_B.sc interop_ph2/host.host.1_6_C.sc \
	interop_ph2/host.host.cleanup.sc \
	interop_ph2/host.router.1_1_D.sc interop_ph2/host.router.1_1_E.sc \
	interop_ph2/host.router.1_1_F.sc interop_ph2/host.router.1_2_C.sc \
	interop_ph2/host.router.1_2_D.sc interop_ph2/host.router.1_3_A.sc \
	interop_ph2/host.router.1_3_B.sc interop_ph2/host.router.1_3_C.sc \
	interop_ph2/host.router.1_4_A.sc interop_ph2/host.router.1_4_B.sc \
	interop_ph2/host.router.1_5.sc \
	interop_ph2/host.router.1_6_A.sc interop_ph2/host.router.1_6_D.sc \
	interop_ph2/host.router.cleanup.sc \
	interop_ph2/router.host.1_1_D.sc interop_ph2/router.host.1_1_E.sc \
	interop_ph2/router.host.1_1_F.sc interop_ph2/router.host.1_2_C.sc \
	interop_ph2/router.host.1_2_D.sc interop_ph2/router.host.1_3_A.sc \
	interop_ph2/router.host.1_3_B.sc interop_ph2/router.host.1_3_C.sc \
	interop_ph2/router.host.1_4_A.sc interop_ph2/router.host.1_4_B.sc \
	interop_ph2/router.host.1_5.sc \
	interop_ph2/router.host.1_6_A.sc interop_ph2/router.host.1_6_D.sc \
	interop_ph2/router.host.cleanup.sc \
	interop_ph2/router.router.1_1_G.sc interop_ph2/router.router.1_1_H.sc \
	interop_ph2/router.router.1_1_I.sc interop_ph2/router.router.1_2_E.sc \
	interop_ph2/router.router.1_2_F.sc interop_ph2/router.router.1_6_B.sc \
	interop_ph2/router.router.1_6_E.sc \
	interop_ph2/router.router.cleanup.sc