noinst_LIBRARIES = libCm.a

libCm_a_SOURCES = BtArray.cc CmAgent.cc CmLexer.cc CmReceiver.h \
                  BtArray.h CmAgent.h CmLexer.h CmSocket.cc \
                  BtList.cc CmCltn.h CmMain.cc CmSocket.h \
                  BtList.h CmDispatch.cc CmMain.h CmString.cc PerfCollect.cc \
                  BtObject.cc CmDispatch.h CmMatch.cc CmString.h PerfCollect.h \
                  BtObject.h CmFdMasks.cc CmMatch.h CmToken.cc Timer.cc \
                  BtSet.cc CmFdMasks.h CmQueue.cc CmToken.h Timer.h \
                  BtSet.h CmFdSet.cc CmQueue.h CmTypes.cc timeval.cc \
                  CmFdSet.h CmReceiver.cc CmTypes.h timeval.h
